--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,7 @@ dependencies = [
   "requests>=2.31",
   "python-dotenv>=1.0",
   "cryptography>=41.0",
+  "fastapi>=0.104.0",
+  "uvicorn>=0.24.0",
 ]
 
