Added the token

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/your_webhook_id/your_webhoo
 
 # Kalshi WebSocket URL (defaults to demo environment)
 KALSHI_WS_URL=wss://demo-api.kalshi.co/trade-api/ws/v2
+
+DISCORD_BOT_TOKEN=Token
+
+DISCORD_CHANNEL_ID=ChannelID
