Added the bot changes

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,10 @@ KALSHI_WS_URL=wss://demo-api.kalshi.co/trade-api/ws/v2
 DISCORD_BOT_TOKEN=Token
 
 DISCORD_CHANNEL_ID=ChannelID
+
+OPENROUTER_API_KEY=sk-or-v1-your_openrouter_api_key_here
+
+RESEARCH_SCHEDULE_HOUR=8
+RESEARCH_SCHEDULE_MINUTE=0
+
+GOOGLE_API_KEY=your_google_api_key_here
