--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,12 @@ dependencies = [
   "pydantic>=2.0.0",
   "pydantic-settings>=2.0.0",
   "typer>=0.9.0",
+  "httpx>=0.27.0",
+  "apscheduler>=3.10.0",
+  "pytz>=2024.1",
 ]
 
 [project.scripts]
 kalshi-bot = "src.cli:cli"
+kalshi-research = "src.research_bot:main"
 
