--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
   "httpx>=0.27.0",
   "apscheduler>=3.10.0",
   "pytz>=2024.1",
+  "google",
+  "google.genai",
 ]
 
 [project.scripts]
