--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,7 @@ dependencies = [
   "httpx>=0.27.0",
   "apscheduler>=3.10.0",
   "pytz>=2024.1",
-  "google",
-  "google.genai",
+  "google-genai>=1.56.0",
   "streamlit>=1.40.0",
 ]
 
