--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,6 @@
-# The Odds API key (get free key at https://the-odds-api.com/)
+# Backend API URL (defaults to /api for same-origin)
+# For cross-origin, use full URL: http://localhost:8000/api
+VITE_API_URL=http://localhost:8000/api
+
+# The Odds API key for live FanDuel odds (get free key at https://the-odds-api.com/)
 VITE_ODDS_API_KEY=your_api_key_here
