Added the chart change

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,7 @@ RESEARCH_SCHEDULE_HOUR=8
 RESEARCH_SCHEDULE_MINUTE=0
 
 GOOGLE_API_KEY=your_google_api_key_here
+
+# The Odds API key (for live sports odds)
+# Get a free key from https://the-odds-api.com/
+VITE_ODDS_API_KEY=your_odds_api_key_here
