--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,5 +2,5 @@
 # For cross-origin, use full URL: http://localhost:8000/api
 VITE_API_URL=http://localhost:8000/api
 
-# The Odds API key for live FanDuel odds (get free key at https://the-odds-api.com/)
-VITE_ODDS_API_KEY=your_api_key_here
+# Note: The Odds API key is now configured on the backend (ODDS_API_KEY)
+# See the root .env.example for backend configuration
