Added the telegram changes

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,13 @@ DISCORD_BOT_TOKEN=Token
 
 DISCORD_CHANNEL_ID=ChannelID
 
+# Telegram configuration (optional - for order notifications)
+# Create a bot via @BotFather on Telegram and get the token
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+# Get chat ID by messaging your bot and checking https://api.telegram.org/bot<token>/getUpdates
+# Or add @userinfobot to get your user ID, or use a group chat ID (starts with -)
+TELEGRAM_CHAT_ID=your_chat_id_here
+
 OPENROUTER_API_KEY=sk-or-v1-your_openrouter_api_key_here
 
 RESEARCH_SCHEDULE_HOUR=8
@@ -31,4 +38,4 @@ GOOGLE_API_KEY=your_google_api_key_here
 
 # The Odds API key (for live sports odds)
 # Get a free key from https://the-odds-api.com/
-VITE_ODDS_API_KEY=your_odds_api_key_here
+ODDS_API_KEY=your_odds_api_key_here
